--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unesco_dep",
+  "name": "unesco-dep",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
@@ -16,15 +16,15 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-less": "^4.0.1",
     "gulp-multi-process": "^1.3.1",
+    "gulp-pug": "^4.0.1",
     "gulp-reload": "0.0.4",
     "gulp-rename": "^1.4.0",
     "gulp-strip-comments": "^2.5.2",
     "gulp-watch": "^5.0.1",
-    "normalize.less": "^1.0.0",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-pug": "^4.0.1"
+    "normalize.less": "^1.0.0"
   },
   "browserslist": [
     "last 2 version"
@@ -34,13 +34,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/VladGPine/unesco_dep.git"
+    "url": "git+https://github.com/VladGPine/unesco-dep.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/VladGPine/unesco_dep/issues"
+    "url": "https://github.com/VladGPine/unesco-dep/issues"
   },
-  "homepage": "https://github.com/VladGPine/unesco_dep#readme"
+  "homepage": "https://github.com/VladGPine/unesco-dep#readme"
 }
